--- a/moments/templates/macros.html
+++ b/moments/templates/macros.html
@@ -3,11 +3,18 @@
 {% macro photo_card(photo) %}
 <div class="photo-card card">
   <a class="card-thumbnail" href="{{ url_for('main.show_photo', photo_id=photo.id) }}">
-    <img class="card-img-top portrait" src="{{ url_for('main.get_image', filename=photo.filename_s) }}">
+    <img
+      class="card-img-top portrait"
+      src="{{ url_for('main.get_image', filename=photo.filename_s) }}"
+      alt="{{ photo.alt_text or 'image' }}"
+    >
   </a>
-  <div class="card-body">
+  <div class="card-body d-flex align-items-center gap-2">
     {{ render_icon('suit-heart-fill') }} {{ photo.collectors_count }}
     {{ render_icon('chat-left-fill') }} {{ photo.comments_count }}
+    {% if photo.alt_is_auto %}
+      <span class="badge text-bg-light border">Auto ALT</span>
+    {% endif %}
   </div>
 </div>
 {% endmacro %}
